--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image" />
 
     <!-- App Title -->
-    <title>Riyas Ahamed | Portfolio</title>
+    <title>RizzNexus | Portfolio</title>
 
     <!-- Favicon -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
